--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kabeer Session Bot",
+  "name": "Dark Mention Bot",
   "logo": "https://telegra.ph/file/e677cf0a08017d8ca0915.jpg",
   "description": "Session Gen Bot.",
   "repository": "https://github.com/vaibhavchandra12/session",
